Fixing popover alignment problems.

--- a/infl-styles/_all_styleguide.scss
+++ b/infl-styles/_all_styleguide.scss
@@ -9,7 +9,7 @@
   font-style: normal;
 }
 
-.PreviewArea {
+.PreviewArea, .tether-element {
   @import "avatar";
   @import "accordion";
   @import "alert";
